--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@ a {
     text-decoration: none;
 }
 
-html, body {
+html,
+body {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
@@ -28,6 +29,18 @@ nav p {
     font-size: 20px;
     font-weight: 500;
     text-transform: uppercase;
+    color: #fff;
+}
+
+.container {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: url(../images/bg.jpg) 50% 50% no-repeat;
+    background-size: cover;
+    z-index: -1;
 }
 
 .container h1 {
@@ -40,6 +53,7 @@ nav p {
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
+    color: #fff;
 }
 
 .loader {
@@ -72,12 +86,21 @@ img {
     clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
 }
 
+.overlay video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .col {
     width: 50%;
     padding: 1em;
 }
 
-h2 {
+.col h2 {
     margin: 0;
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     font-size: 60px;
@@ -86,37 +109,18 @@ h2 {
     line-height: 1;
 }
 
-.col:nth-child(2) h2 {
+.col h2 span {
+    background-image: linear-gradient(to top, blue, yellow);
+    background-clip: text;
+    color: transparent;
+}
+
+.col .btn-title {
     font-size: 24px;
     text-align: right;
     color: gray;
 }
 
-.col:nth-child(2) h2 span {
+.col .btn-title span {
     color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
