03. usefull-things-104-intro-clippath. Bg, images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ img {
 .col .btn-title {
     font-size: 24px;
     text-align: right;
-    color: gray;
+    color: grey;
 }
 
 .col .btn-title span {
